package Domain.Entity.Elements.Items;

// Clase MedicalKit que hereda de Items
class MedicalKit extends Items { 
    private int increaseInLife;

    public void enhancementEffect(){}

}

