package src.main.java.Maps.EnvairomentHazards;

import src.main.java.Maps.Maps;

class RadioactiveTank extends envairomentHazard {
    public void poisonEffect() {

    }
}