@startuml

'Clase Principal que se encarga de levantar el juego
class GameApp{
    -heightScreen : int
    -widthScreen  : int
    -boarGame : board
    #initSettings()
    #initInput()
    #initGameVars()
    #initPhysics()
    #onUpDate()
    #initGame()
    #setScreen(ScreenController TyperScreen)
    #setCharacters(ArrayList players, ArrayList enemies)
}


'Clase encargada de crear items como entidades dentro del juego
class Items{
    nameItems: String
    type: String
    effect()
    textureSprite : texture
    enhancement effect()
}

class medicalKit{
    increaseInLife : int
}

class adrenalin {
    increaseInSpeed : int
}

class TurnController{
   countStepPLayers : int
   countStepEnemies : int
   nextTurn()
}

'Mapas de juego

class mapLevel_01 {
    zooWalls : Sprite
    zooDolls : Sprite
    alienSpecimen  : Sprite
}

class mapLevel_02 {
    labWalls : Sprite
    labDoors : Sprite
    experiments : Sprite
}

class mapLevel_03 {
    wallsWall : Sprite
    wallDoors : Sprite
    aliens : Sprite
}

class Maps {
    environmentalHazardsPositionX : ArrayList<int>
    environmentalHazardsPositionY : ArrayList<int>
    environmentalHazardsList : ArrayList<environmentalHazards>
    nameMap : String
    backgroundTexture : Texture
    spawnsPlayers : ArrayList<array>
    spawnsEnemies : ArrayList<array>
    spawnsPower :  ArrayList<array>
    spawnsWeanpons :  ArrayList<array>
    spawnsItems :  ArrayList<array>
    walls : Texture
    doors : Texture
    loadWalls()
    loadDoors()
}


'Enemies

class Xenomorf{
    xenomorfAduction()
}

class Stalker{
    stalkerView()
}

class Titan{
    devastationTitan()
}

class Drone{
    droneWatch()    
}

class IACore{
    hackingIaCore()
}

'players
class ElenaDrakeCapitan{
    skillTacticOrder()
}

class EngineerMarcus{
    skillEmergensFix()
}

class DraLara{
    skillQuickAnalysis()
}
 
class JaxKane{
    skillDevastatingAttack()
}

class ZaraQuinn{
    skillRemoveEnemies()
}
 
 

    
'Clase encargada de crear los atributos de cada jugador o enemigo
class Characters{
    -life : int
    -attack : int
    -name :Srting
    -items : itemFactory
    -stepCounter : int
    -animationChannels : Animation
    -animationUP : AnimationChannel
    -animationLeft :AnimationChannel
    -animationRight :AnimationChannel
    -animationDown :AnimationChannel
    -animationIdle :ANimationChannel
    -animationMov : AnimationChanel
    -animationDead : AnimationChannel
    -animationAttack : AnimationChannel
    -speedX         : int
    -speedY         : int
    -positionX      : int
    -positionY      : int
    
    setPositionX()
    setPositionY()
    moveUp()
    moveLeft()
    moveDown()
    moveRight()
    attack()
    idle()
    dead()
    setAnimationsChannels()
    onUpdate()
}

class Players{
    rol : String
    skill : String
    skillAnimation : Animation
    skillAnimation(Animation skill Animation)
}

class Enemies {
    typeEnemy : String
}



'Aramas del juego
class Weanpons {
    nameWeanpon : String
    type: String
    effect()
    range : int
    textureSprite : texture
}

class Powers{
    namePower : String
    type : String
    textureSprite : texture
    range : int
    effect()
}


class flamethrower {
    fireTorrent()
}

class plasmaRifle{
    plasmaTorrent()
}

'Poderes

class remoteHacking{
    breakSistemEnemies()
}

class energyShield {
    protectPlayers()
}

'Game Board
class GameBoard{
    enemiesInMapList : ArrayList<Enemies>
    playersInMapList : ArrayList<Players>
    itemsInMap : ArrayList<Items>
    powersInMap : ArrayList<Powers>
    weanponsInMap : ArrayList<Weanpons>
    boardMatrix : ArrayList<int>
    mapInBoard : String
    setEnemies(Enemies enemy)
    setPlayers(Players player)
    setItem(Items item)
    setPower(Powers power)
    setWeapons(Weapons weapon)
    setBoardMap(Maps mapp)
    updateBoard()
}



'Reglas de Agregacion Y Composicion

Enemies --|> "1..*" IACore : "es un"
Enemies --|> "1..*" Xenomorf : "es un"
Enemies  --|>  "1..*" Drone : "es un"
Enemies  --|> "1..*" Titan : "es un"
Enemies  --|> "1..*" Stalker : "es un"

Characters --|> Players : "es un" 
Characters --|> Enemies : "es un"

Players --|> "1" JaxKane : "es un"
Players --|>  "1" EngineerMarcus : "es un"
Players --|> "1" DraLara : "es un"
Players --|> "1" ElenaDrakeCapitan : "es un"
Players --|>  "1" ZaraQuinn : "es un"

GameApp *-- "1" GameBoard : "contiene un"

'GameBoard
GameBoard *-- Characters : "tiene varios"
GameBoard *-- Items : "tiene varios"
GameBoard *-- Weanpons : "tiene varios"
GameBoard *-- Powers: "tiene varios"
GameBoard *-- Maps : "tiene varios"
TurnController *-- "1" GameBoard 
Maps *-- environmentalHazards : "tiene varios"

class environmentalHazards {
    name : String
    AnimationDanger : Animation
    damage : int
}

class radioactiveTank {
    poisonEfecct()
}

class ventilationDuct {
    teleportRandomPLace()
}

Powers --|> "1..*" energyShield : "es un"
Powers --|> "1..*" remoteHacking : "es un"
Weanpons --|> "1..*" flamethrower : "es un"
Weanpons --|> "1..*" plasmaRifle : "es un"

Items --|> medicalKit : "es un"
Items --|> adrenalin : "es un"

environmentalHazards --|> radioactiveTank : "es un"
environmentalHazards --|> ventilationDuct : "es un"

Maps --|> mapLevel_01 : "es un"
Maps --|> mapLevel_02 : "es un"
Maps --|> mapLevel_03 : "es un"

@enduml
